<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rlTravelHonor">
        <include
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/activity_travel_honor_map"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <Button
            android:text="@string/profile_name"
            android:textAllCaps="false"
            android:layout_below="@+id/my_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btHelloWorld"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:id="@+id/btAllMedal"
            android:text="@string/all_medal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/btAllMedal"
            android:textAllCaps="false"
            android:id="@+id/btMyMedal"
            android:text="@string/my_medal"/>

    </RelativeLayout>

</RelativeLayout>
